<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_snooze_1hr"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snooze_1_hour" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_snooze_3hr"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snooze_3_hours" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_snooze_tomorrow"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snooze_tomorrow_morning" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_snooze_custom"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snooze_custom_time" />
</LinearLayout>
